# research_program

./: .gitignore  README.md  SIMULATION2_USAGE.md  SPECIFICATION.md  WEB_GUI_REDESIGN_SPEC.md  main.py  pyproject.toml  report.md  run_streamlit_app.bat  stop_streamlit_app.bat  論文改訂マスタードキュメントv2.md
figures/: fig_coupling_1sin.csv  (+31 more)
make_simulation_data/: README.md  aggregate_phase_gap_error_stats.py  app_config.py  calculate_cycle_data.py  calculate_phase_gap_error.py  check_function.py  compare_per_by_devices_and_interval.py  config_factory.py  coupling_functions.py  import_raw_data_to_results.py  main.py  oscillator.py  plot_PER.py  plot_aggregated_phase_gap_error.py  plot_aggregated_phase_gap_error_overlay.py  plot_convergence_summary.py  plot_per_aligned.py  plot_phase_gap_error.py  pyproject.toml  range_generators.py  scheduler.py  visualize_phase_diff.py
make_simulation_data/aggregated_stats/: KURAMOTO_100.csv  KURAMOTO_110.csv  KURAMOTO_120.csv  KURAMOTO_130.csv  KURAMOTO_140.csv  KURAMOTO_150.csv  KURAMOTO_160.csv  KURAMOTO_170.csv  KURAMOTO_180.csv  KURAMOTO_190.csv  KURAMOTO_200.csv  KURAMOTO_210.csv  KURAMOTO_220.csv  KURAMOTO_230.csv  KURAMOTO_240.csv  KURAMOTO_250.csv  KURAMOTO_260.csv  KURAMOTO_270.csv  KURAMOTO_280.csv  KURAMOTO_290.csv  KURAMOTO_30.csv  KURAMOTO_40.csv  KURAMOTO_50.csv  KURAMOTO_60.csv  KURAMOTO_70.csv  KURAMOTO_80.csv  KURAMOTO_90.csv  LINEAR_100.csv  LINEAR_110.csv  LINEAR_120.csv  LINEAR_130.csv  LINEAR_140.csv  LINEAR_150.csv  LINEAR_160.csv  LINEAR_170.csv  LINEAR_180.csv  LINEAR_190.csv  LINEAR_200.csv  LINEAR_210.csv  LINEAR_220.csv  (+43 more)
(+7841 files in other folders)
