[project]
name = "research-program"
version = "0.1.0"
description = "Research tools for simulation, data processing, and web visualization."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "streamlit>=1.38.0",
    "uuid6>=2025.0.1",
]

[project.scripts]
research-program = "research_program.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_program"]
